# resource_monitor

./: CMakeLists.txt  README.md
docs/: 01_new_features.md
examples/: config_demo.cpp  history_demo.cpp  monitor_demo.cpp
include/: config.h  history.h  logger.h  monitor.h  ui.h
src/: config.cpp  console_ui.cpp  history.cpp  logger.cpp  main.cpp  monitor.cpp
